<resources>
    <string name="app_name">DiPi</string>
    <string name="doctor_image">doctor image</string>
    <string name="welcome">Welcome to namaaplikasi, \nlet\'s get started!</string>
    <string name="login">login</string>
    <string name="signup">signup</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="email_empty">Insert email</string>
    <string name="password_empty">Insert password</string>
    <string name="message_login_page">Insert your data here</string>
    <string name="title_signup_page">Fill the data first</string>
    <string name="title_login_page">Please login first</string>
    <string name="name">Name</string>
    <string name="name_empty">Insert name</string>
    <string name="title_activity_disease">DiseaseActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="medicine">Medicines</string>
    <string name="consultate">Consultate</string>
    <string name="disease">Diseases</string>
    <string name="consultation_title">Hello #someone#, how could we help you?</string>
    <string name="insert_complaint_text">Insert your complaint here</string>
    <string name="submit">Submit</string>
    <string name="menu1">menu1</string>
    <string name="menu2">menu2</string>
    <string name="hello">Hello</string>
    <string name="logout_message">Are you sure you want to logout?</string>
    <string name="logout">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="search_medicine">Search medicine here…</string>
    <string name="search_disease">Search disease here…</string>
    <string name="item_image">Item image</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm password</string>
    <string name="min_password_6_char">Password must be at least 6 characters</string>
    <string name="confpassword_notsame_password">Confirm password and password did not match!</string>
    <string name="api_fail">Server connection failed</string>
    <string name="username_empty">Insert username</string>
    <string name="email_invalid">Input a valid email format</string>
    <string name="login_success">Login success</string>
    <string name="signup_success">Signup success</string>
    <string name="how_could_help">, how could we help you?</string>
    <string name="summary">Summary</string>
    <string name="description">Description</string>
    <string name="disease_detail">Disease Detail</string>
    <string name="medicine_detail">Medicine Detail</string>
    <string name="session_expired">Session expired</string>
    <string name="continuestring">Continue</string>
    <string name="medicines">Medicines</string>
    <string name="medicine_notfound">Nothing found in our database, please consult to a doctor to find out more.</string>
    <string name="some_predicitons">Here are some prediction for your problem</string>
    <string name="predicted_disease">Predicted Disease</string>
    <string name="prediction_result">Prediction result</string>
    <string name="float_number" translatable="false">88.88</string>
    <string name="info">Info</string>
    <string name="your_profile">Your Profile</string>
    <string name="dummy_name">Hello, Someone\'s name</string>
    <string name="dummy_username">username</string>
    <string name="dummy_email">someone@gmail.com</string>
    <string name="about">About DiPi</string>
    <string name="informations">Informations</string>
    <string name="profile_image">profile image</string>
    <string name="dipi">DiPi</string>
    <string name="start_consultation">Start Consultation</string>
    <string name="consultation">Consultation</string>
    <string name="about_dipi_text">Nowadays, even with the fast development of technology, it is still hard to know what disease we have from the symptoms that we know without consulting directly to a doctor. \n\nWe could search for the answer on the internet, but sometimes the result is inaccurate because of the limitation of what we could do on a search engine. What could we do to make disease prediction easier? \n\nWith that problem in mind, we want to make it easier for everyone to gain information about their disease by using the help of machine learning.</string>
</resources>